--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-scripts": "1.1.4",
     "reactjs-popup": "^1.1.1",
     "redux": "^4.0.0",
-    "superagent": "^3.8.3"
+    "superagent": "^3.8.3",
+    "web3": "^1.0.0-beta.35"
   },
   "scripts": {
     "start": "react-app-rewired start",
