--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@antv/data-set": "^0.8.9",
     "antd": "^3.6.6",
     "axios": "^0.18.0",
+    "bignumber": "^1.1.0",
     "bignumber.js": "^7.2.1",
     "bizcharts": "^3.1.10",
     "bizcharts-plugin-slider": "^2.0.3",
@@ -25,6 +26,7 @@
     "reactjs-popup": "^1.1.1",
     "redux": "^4.0.0",
     "superagent": "^3.8.3",
+    "timeout-then": "^1.1.0",
     "web3": "^1.0.0-beta.35"
   },
   "scripts": {
