fix slot_machine random bug.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,9 @@
         "system_error": "cpp",
         "type_traits": "cpp",
         "utility": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "__bit_reference": "cpp",
+        "__string": "cpp",
+        "algorithm": "cpp"
     }
 }
